<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" formatted="false">Fear Launcher</string>
    <string name="app_short_name" formatted="false">FearLauncher</string>
    <string name="login_online_username_hint" formatted="false">Username</string>
    <string name="login_online_login_label" formatted="false">Login</string>
    <string name="hint_control_mapping" formatted="false">"Touch the top center cogwheel to open the context menu ⚙\nTap a button to customize: edit, resize, remove, or change its keybinds."</string>
    <string name="warning_remove_account" formatted="false">This account will be removed!</string>
    <string name="alerttitle_installmod" formatted="false">Select a mod installer</string>
    <string name="error_fatal" formatted="false">FearLauncher has unexpectedly crashed</string>
    <string name="error_no_version" formatted="false">No version!</string>
    <string name="error_show_more" formatted="false">Show more</string>
    <string name="error_show_less" formatted="false">Show less</string>
    <string name="toast_permission_denied" formatted="false">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success" formatted="false">Install successful</string>
    <string name="mcl_tab_wiki" formatted="false">Wiki</string>
    <string name="mcl_launch_cleancache" formatted="false">Cleaning cache files</string>
    <string name="mcl_launch_downloading" formatted="false">Downloading %s</string>
    <string name="mcl_launch_downloading_progress" formatted="false">Downloading %s (%.2f MB / %.2f MB)</string>
    <string name="mcl_launch_download_assets" formatted="false">Preparing to download resources</string>
    <string name="mcl_options" formatted="false">Options</string>
    <string name="mcl_option_customcontrol" formatted="false">Custom controls</string>
    <string name="mcl_setting_title_use_surface_view" formatted="false">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view" formatted="false">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch" formatted="false">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch" formatted="false">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler" formatted="false">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler" formatted="false">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger" formatted="false">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger" formatted="false">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale" formatted="false">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale" formatted="false">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale" formatted="false">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale" formatted="false">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs" formatted="false">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs" formatted="false">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer" formatted="false">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4" formatted="false">Holy GL4ES - all versions till 1.21.4, fast</string>
    <string name="mcl_setting_renderer_vulkan_zink" formatted="false">Zink (Vulkan) - all versions, mid</string>
    <string name="mcl_setting_renderer_freedreno_kgsl" formatted="false">Freedreno - all versions, fast, Adreno-only</string>
    <string name="mcl_setting_renderer_ltw" formatted="false">LTW (OpenGL ES 3) - 1.17+ only, fast</string>
    <string name="mcl_setting_veroption_release" formatted="false">Release</string>
    <string name="mcl_setting_veroption_snapshot" formatted="false">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha" formatted="false">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta" formatted="false">Old-beta</string>
    <string name="mcl_setting_java_sandbox" formatted="false">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle" formatted="false">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_version_clone" formatted="false">Clone</string>
    <string name="global_edit" formatted="false">Edit</string>
    <string name="global_error" formatted="false">Error</string>
    <string name="global_load" formatted="false">Load</string>
    <string name="global_name" formatted="false">Name</string>
    <string name="global_remove" formatted="false">Remove</string>
    <string name="global_clone" formatted="false">Clone</string>
    <string name="global_restart" formatted="false">Restart</string>
    <string name="global_save" formatted="false">Save</string>
    <string name="global_unpacking" formatted="false">Unpacking %s</string>
    <string name="global_error_field_empty" formatted="false">This field can\'t be empty</string>
    <string name="global_waiting" formatted="false">Wait</string>
    <string name="global_select" formatted="false">Select</string>
    <string name="global_retry" formatted="false">Retry</string>
    <string name="global_default" formatted="false">Default</string>
    <string name="mcn_exit_title" formatted="false">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_abort_title" formatted="false">Application/Game aborted, check latestlog.txt for more information</string>
    <string name="mcn_exit_confirm" formatted="false">Are you sure want to force close?</string>
    <string name="mcn_check_fail_vulkan_support" formatted="false">Zink (Vulkan) renderer is not supported on this device!</string>
    <string name="control_chat" formatted="false">Chat</string>
    <string name="control_debug" formatted="false">Debug</string>
    <string name="control_primary" formatted="false">Pri</string>
    <string name="control_secondary" formatted="false">Sec</string>
    <string name="control_shift" formatted="false">◇</string>
    <string name="control_inventory" formatted="false">Inv</string>
    <string name="control_up" formatted="false">▲</string>
    <string name="control_left" formatted="false">◀</string>
    <string name="control_right" formatted="false">▶</string>
    <string name="control_down" formatted="false">▼</string>
    <string name="control_jump" formatted="false">⬛</string>
    <string name="control_thirdperson" formatted="false">3rd</string>
    <string name="control_listplayers" formatted="false">Tab</string>
    <string name="control_mouse" formatted="false">Mouse</string>
    <string name="control_mouseoff" formatted="false">Mouse: off</string>
    <string name="control_mouseon" formatted="false">Mouse: on </string>
    <string name="control_forceclose" formatted="false">Force close</string>
    <string name="control_viewout" formatted="false">Log output</string>
    <string name="control_adebug" formatted="false">Input Debug</string>
    <string name="control_customkey" formatted="false">Send custom keycode</string>
    <string name="import_control_label" formatted="false">Import controls</string>
    <string name="import_control_invalid_file" formatted="false">Invalid or corrupted file</string>
    <string name="import_control_import_button" formatted="false">import controls</string>
    <string name="import_control_verifying_file" formatted="false">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name" formatted="false">Invalid name or file already exists</string>
    <string name="import_control_done" formatted="false">Importation done</string>
    <string name="customctrl_toggle" formatted="false">Toggleable</string>
    <string name="customctrl_size" formatted="false">Size</string>
    <string name="customctrl_mapping" formatted="false">Mapping</string>
    <string name="customctrl_orientation" formatted="false">Orientation</string>
    <string name="customctrl_background_bitmap" formatted="false">Background image</string>
    <string name="customctrl_background_color" formatted="false">Background color</string>
    <string name="customctrl_background_color_warning" formatted="false">Changing background color will reset the background image</string>
    <string name="customctrl_corner_radius" formatted="false">Corner radius</string>
    <string name="customctrl_stroke_width" formatted="false">Stroke width</string>
    <string name="customctrl_stroke_color" formatted="false">Stroke color</string>
    <string name="customctrl_button_opacity" formatted="false">Button Opacity</string>
    <string name="customctrl_addbutton" formatted="false">Add button</string>
    <string name="customctrl_addbutton_drawer" formatted="false">Add button drawer</string>
    <string name="customctrl_addbutton_joystick" formatted="false">Add joystick</string>
    <string name="customctrl_addsubbutton" formatted="false">Add sub-button</string>
    <string name="customctrl_selectdefault" formatted="false">Select default controlmap</string>
    <string name="customctrl_export" formatted="false">Export controlmap</string>
    <string name="main_share_logs" formatted="false">Share log file</string>
    <string name="main_install_jar_file" formatted="false">Execute a .jar</string>
    <string name="main_play" formatted="false">Play</string>
    <string name="autoram_info_msg" formatted="false">Memory set to %d MB</string>
    <string name="mcl_setting_check_libraries" formatted="false">Check libraries after downloading</string>
    <string name="preference_sustained_performance_title" formatted="false">Enable sustained performance mode</string>
    <string name="preference_sustained_performance_description" formatted="false">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_force_vsync_title" formatted="false">Force enable VSync</string>
    <string name="preference_force_vsync_description" formatted="false">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_use_angle_title" formatted="false">Use ANGLE</string>
    <string name="preference_use_angle_description" formatted="false">Allows using ANGLE instead of the system driver. Can fix graphical issues with mods on some GPUs</string>
    <string name="preference_category_video" formatted="false">Video settings</string>
    <string name="preference_vsync_in_zink_title" formatted="false">Allow V-Sync with Zink</string>
    <string name="preference_vsync_in_zink_description" formatted="false">Allows the launcher to use internal system APIs to enable V-Sync for Zink. Turn this off if your launcher suddenly crashes with Zink after a system update.</string>
    <string name="log_view_button_scroll_off" formatted="false">Autoscroll\nOFF</string>
    <string name="log_view_button_scroll_on" formatted="false">Autoscroll\nON</string>
    <string name="log_view_button_output_off" formatted="false">Output\nOFF</string>
    <string name="log_view_button_output_on" formatted="false">Output\nON</string>
    <string name="log_view_label_log_output" formatted="false">Log output:</string>
    <string name="mcl_button_open_directory" formatted="false">Open game directory</string>
</resources>