<?xml version="1.0" encoding="utf-8"?>
<!-- FEAR log output: a glass bar over a translucent console -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/top_log_view"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/fear_panel_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:text="@string/log_view_label_log_output"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintStart_toStartOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="@+id/top_log_view" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/btn_share_mclogs"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_32sdp"
        android:minWidth="0dp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="SHARE LOGS"
        android:textSize="@dimen/_8ssp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:maxLines="1"
        android:background="@drawable/theme_button_bg"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/content_log_toggle_autoscroll"
        android:layout_marginEnd="@dimen/_8sdp" />

    <ToggleButton
        android:id="@+id/content_log_toggle_autoscroll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:minWidth="0dp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textOff="@string/log_view_button_scroll_off"
        android:textOn="@string/log_view_button_scroll_on"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_8ssp"
        android:background="@drawable/fear_log_toggle"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/content_log_toggle_log"
        android:layout_marginEnd="@dimen/_6sdp" />

    <ToggleButton
        android:id="@+id/content_log_toggle_log"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:minWidth="0dp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textOff="@string/log_view_button_output_off"
        android:textOn="@string/log_view_button_output_on"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_8ssp"
        android:background="@drawable/fear_log_toggle"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/log_view_cancel"
        android:layout_marginEnd="@dimen/_6sdp" />

    <ImageButton
        android:id="@+id/log_view_cancel"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/fear_tray_row_bg"
        android:padding="@dimen/_9sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close_white"
        android:contentDescription="@null"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.kdt.DefocusableScrollView
        android:id="@+id/content_log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#CC0A0A12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_log_view">

        <TextView
            android:id="@+id/content_log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:textColor="#D9FFFFFF"
            android:textSize="@dimen/_9ssp"
            android:fontFamily="monospace"
            android:textIsSelectable="true" />

    </com.kdt.DefocusableScrollView>

</merge>
